--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,5 +1,12 @@
 @import "/styles/mixins";
 @import "/styles/palette";
+
+body {
+  min-height: 100vh;
+
+  background: var(--background-gradient);
+}
+
 .centering-wrapper {
   @include center-content-fullscreen;
 }
