--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,11 @@
 @import "palette";
+@import "resetMixins";
 
 * {
   box-sizing: border-box;
 }
 
 body {
+  @include bodyReset;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  padding: 0;
 }
