--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -9,6 +9,8 @@
   --rock-gradient: linear-gradient(hsl(349, 71%, 52%), hsl(349, 70%, 56%));
   --gesture-background: #{$oc-gray-0};
 
+  --background-gradient: radial-gradient(circle at top, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+
   --shadow-light: hsla(0, 0%, 0%, 0.149);
   --shadow-medium: hsla(0, 0%, 0%, 0.302);
 }
