--- a/src/components/GestureCircle/GestureCircle.module.scss
+++ b/src/components/GestureCircle/GestureCircle.module.scss
@@ -2,16 +2,18 @@
 @import "/styles/mixins";
 
 $trueSize: 160px;
-$borderWidth: 36px;
+$borderWidth: 18px;
 $iconSize: 50px;
 $shadowThickness: 6px;
 
-$innerSize: $trueSize - $borderWidth;
+$innerSize: $trueSize - 2 * $borderWidth;
 
 .gestureCircle {
   @include buttonReset();
   position: relative;
   cursor: pointer;
+
+  margin: $borderWidth;
 
   width: $innerSize;
   height: $innerSize;
@@ -38,9 +40,24 @@ $innerSize: $trueSize - $borderWidth;
     top: 50%;
     transform: translate(-50%, -50%);
 
-    background: var(--paper-gradient);
+    background: var(--outline-background);
 
     box-shadow: inset 0 (-$shadowThickness) 0 0 var(--shadow-light),
       0 $shadowThickness var(--shadow-light);
   }
+}
+
+.paperGestureCircle {
+  @extend .gestureCircle;
+  --outline-background: var(--paper-gradient);
+}
+
+.rockGestureCircle {
+  @extend .gestureCircle;
+  --outline-background: var(--rock-gradient);
+}
+
+.scissorsGestureCircle {
+  @extend .gestureCircle;
+  --outline-background: var(--scissors-gradient);
 }
